maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:5: error: (Int, Int) does not take parameters
  val xBis = trouverBis()(0)
                         ^ShortestPathMaze:6: error: (Int, Int) does not take parameters
  val yBis = trouverBis()(1)
                         ^