maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  val L:Int=getMondeLargeur()
  val H:Int=getMondeHauteur()
  val xBis = trouverBis()(0)
  val yBis = trouverBis()(1)
    // Your code here
}

def trouverBis():(Int,Int) = {
  return (1,2)
}